chore(nvim): Few changes
- Add lspsaga
- Move to use efm-langserver instead of diagnostic-languageserver
- Add formatter

Also add Fig.io

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,37 +1,43 @@
-active_border_color #00ff00
-active_tab_background   #abb2bf
+active_tab_background #7aa2f7
 active_tab_font_style   bold-italic
 active_tab_foreground   #1e2127
+active_tab_foreground #1f2335
+allow_remote_control yes
+background #1a1b26
+background_opacity 1
 adjust_column_width 0
 adjust_line_height  10
-allow_remote_control no
 background       #212226
 background_opacity         1.0
 bell_border_color #ff5a00
 bell_on_tab yes
-bold_font        Hasklug Nerd Font Bold
-bold_italic_font Hasklug Nerd Font Bold Italic
+bold_font        Iosevka Fixed Bold
+bold_italic_font Iosevka Fixed Bold Italic
 box_drawing_scale 0.001, 1, 1.5, 2
+clipboard_control write-clipboard write-primary no-append
 clear_all_shortcuts no
 click_interval -1.0
 clipboard_control write-clipboard write-primary
 close_on_child_death no
-color0   #212226
-color1   #e06c75
-color10  #98c379
-color11  #d19a66
-color12 #2C323B
-color13  #cb1ed1
-color14  #0dcdcd
-color15  #ffffff
-color2   #98c379
-color3   #d19a66
-color4  #61AFEF
-color5   #c678dd
-color6   #0dcdcd
-color7   #abb2bf
-color8   #5c6370
-color9   #e06c75
+color0 #15161E
+color1 #f7768e
+color10 #9ece6a
+color11 #e0af68
+color12 #7aa2f7
+color13 #bb9af7
+color14 #7dcfff
+color15 #c0caf5
+color16 #ff9e64
+color17 #db4b4b
+color2 #9ece6a
+color3 #e0af68
+color4 #7aa2f7
+color5 #bb9af7
+color6 #7dcfff
+color7 #a9b1d6
+color8 #414868
+color9 #f7768e
+cursor #c0caf5
 copy_on_select yes
 cursor #61AFEF
 cursor_blink_interval      0.5
@@ -45,10 +51,10 @@ editor .
 enable_audio_bell yes
 enabled_layouts *
 focus_follows_mouse no
-font_family      Hasklug Nerd Font Regular
+font_family      Iosevka Fixed
 font_size 13.0
 font_size_delta 12.0
-foreground       #abb2bf
+foreground #c0caf5
 hide_window_decorations no
 inactive_border_color #cccccc
 inactive_tab_background #2c313c
