--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ apache-libcloud==3.3.1
 appdirs==1.4.4
 appnope==0.1.0
 argcomplete==1.12.2
+Arpeggio==1.10.2
 arrow==0.17.0
 asciimatics==1.11.0
 astroid==2.4.2
@@ -35,7 +36,9 @@ commonmark==0.9.1
 cookiecutter==1.7.2
 cryptography==3.3.1
 decorator==4.4.2
+dill==0.3.3
 distlib==0.3.1
+docformatter==1.4
 docutils==0.15.2
 doq==0.6.4
 enrich==1.2.6
@@ -90,7 +93,7 @@ mistune==2.0.0a5
 molecule==3.2.3
 msgpack==1.0.0
 multidict==5.1.0
-mypy==0.782
+mypy==0.902
 mypy-extensions==0.4.3
 neovim==0.3.1
 neovim-remote==2.4.0
@@ -101,6 +104,7 @@ packaging==20.4
 pandas==1.1.2
 paramiko==2.7.2
 parso==0.7.1
+parver==0.3.1
 pathspec==0.8.0
 pbr==5.5.0
 pexpect==4.8.0
@@ -115,6 +119,8 @@ proto-plus==1.13.0
 protobuf==3.13.0
 psutil==5.7.2
 ptyprocess==0.6.0
+pulumi==3.4.0
+pulumi-gcp==5.8.0
 py==1.9.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -149,6 +155,7 @@ rich==9.10.0
 rope==0.17.0
 rsa==4.5
 s3transfer==0.4.2
+semver==2.13.0
 shellingham==1.4.0
 six==1.15.0
 smmap==3.0.4
@@ -164,9 +171,11 @@ toml==0.10.1
 traitlets==5.0.4
 tree-sitter==0.2.2
 typed-ast==1.4.1
+types-PyYAML==0.1.7
 typing-extensions==3.7.4.3
 typing-inspect==0.6.0
 ujson==1.35
+untokenize==0.1.1
 uritemplate==3.0.1
 urllib3==1.25.10
 urwid==2.1.2
