--- a/requirements.txt
+++ b/requirements.txt
@@ -57,8 +57,12 @@ google-api-python-client==1.12.1
 google-auth==1.21.2
 google-auth-httplib2==0.0.4
 google-cloud==0.34.0
+google-cloud-access-context-manager==0.1.3
+google-cloud-asset==3.1.0
 google-cloud-core==1.4.3
 google-cloud-monitoring==2.0.0
+google-cloud-org-policy==0.3.0
+google-cloud-os-config==1.2.0
 google-cloud-secret-manager==0.2.0
 google-cloud-storage==1.32.0
 google-crc32c==1.0.0
