--- a/kitty/mapping.conf
+++ b/kitty/mapping.conf
@@ -1,5 +1,3 @@
-
-
 map alt+left send_text all \x1b\x62
 map alt+right send_text all \x1b\x66
 map ctrl+shift+backspace change_font_size all 0
@@ -33,10 +31,9 @@ map kitty_mod+end       scroll_end
 map kitty_mod+enter new_window_with_cwd
 map kitty_mod+equal     change_font_size all +2.0
 map kitty_mod+escape kitty_shell window
-map kitty_mod+f move_window_forward
+map kitty_mod+f launch --stdin-source=@screen_scrollback --stdin-add-formatting less +G -Ri
 map kitty_mod+f11    toggle_fullscreen
 map kitty_mod+home      scroll_home
-map kitty_mod+i         show_scrollback
 map kitty_mod+j         scroll_line_down
 map kitty_mod+k         scroll_line_up
 map kitty_mod+l next_layout
