chore(kitty): Change Kitty theme to tokyonight
Also Add enabled_layouts set to horizontal

--- a/kitty/layout.conf
+++ b/kitty/layout.conf
@@ -18,6 +18,8 @@ draw_minimal_borders yes
 dynamic_background_opacity no
 editor .
 enable_audio_bell yes
+enabled_layouts *
+enabled_layouts splits:split_axis=horizontal
 focus_follows_mouse no
 hide_window_decorations no
 inactive_tab_font_style normal
