--- a/nvim/lua/plugins/efm.yml
+++ b/nvim/lua/plugins/efm.yml
@@ -1,220 +1,454 @@
 ---
 version: 2
 root-markers:
+  - RCS/
+  - SCCS/
+  - CVS/
   - .git/
+  - .svn/
+  - .hg/
+  - .bzr/
+  - _darcs/
+  - .git
+# command define
+commands:
+  - title: Reload
+    command: :reload-config
 
+  - title: Editor
+    os: windows
+    command: notepad
+    arguments:
+      - "${FILENAME}"
+  - title: Editor
+    os: linux
+    command: gedit
+    # Linux no method generic GUI editor open
+    arguments:
+      - ${FILENAME}
+  - title: Editor
+    os: darwin
+    command: open
+    arguments:
+      - "-e"
+      - ${FILENAME}
+
+  - title: Filer
+    os: windows
+    command: cmd
+    arguments:
+      - "/c"
+      - "explorer /select,${FILENAME}"
+  - title: Filer
+    os: darwin
+    # Linux   no method generic filer open
+    command: open
+    arguments:
+      - "-R"
+      - ${FILENAME}
+
+  - title: Browser
+    os: darwin
+    # Windows no method generic browser open
+    # Linux   no method generic browser open
+    command: open
+    arguments:
+      - "-a"
+      - "Safari"
+      - ${FILENAME}
+
+  - title: Open
+    os: windows
+    command: rundll32
+    arguments:
+      - "url.dll,FileProtocolHandler"
+      - "${FILENAME}"
+  - title: Open
+    os: linux
+    command: xdg-open
+    arguments:
+      - ${FILENAME}
+  - title: Open
+    os: darwin
+    command: open
+    arguments:
+      - ${FILENAME}
+
+# linter,formatter setting
 tools:
-  eruby-erb: &eruby-erb
-    lint-command: 'erb -x -T - | ruby -c'
-    lint-stdin: true
-    lint-offset: 1
-    format-command: htmlbeautifier
-
-  vim-vint: &vim-vint
-    lint-command: 'vint -'
-    lint-stdin: true
+  cppcheck-lint: &cppcheck-lint
+    lint-command: "cppcheck --quiet --force --enable=style --error-exitcode=1 ${INPUT}"
+    lint-stdin: false
     lint-formats:
-      - '%f:%l:%c: %m'
+      - "%f:%l:%c: %m"
+    root-markers:
+      - compile_commands.json
 
-  make-checkmake: &make-checkmake
-    lint-command: 'checkmake'
-    lint-stdin: true
-
-  markdown-markdownlint: &markdown-markdownlint
-    lint-command: 'markdownlint -s -c %USERPROFILE%\.markdownlintrc'
-    lint-stdin: true
-    lint-formats:
-      - '%f:%l %m'
-      - '%f:%l:%c %m'
-      - '%f: %l: %m'
-
-  markdown-pandoc: &markdown-pandoc
-    format-command: 'pandoc -f markdown -t gfm -sp --tab-stop=2'
-
-  rst-pandoc: &rst-pandoc
-    format-command: 'pandoc -f rst -t rst -s --columns=79'
-
-  rst-lint: &rst-lint
-    lint-command: 'rst-lint'
-    lint-formats:
-      - '%tNFO %f:%l %m'
-      - '%tARNING %f:%l %m'
-      - '%tRROR %f:%l %m'
-      - '%tEVERE %f:%l %m'
-
-  yaml-yamllint: &yaml-yamllint
-    lint-command: 'yamllint -f parsable -'
-    lint-stdin: true
-
-  python-flake8: &python-flake8
-    lint-command: 'flake8 --stdin-display-name ${INPUT} -'
-    lint-stdin: true
-    lint-formats:
-      - '%f:%l:%c: %m'
-
-  python-mypy: &python-mypy
-    lint-command: 'mypy --show-column-numbers'
-    lint-formats:
-      - '%f:%l:%c: %trror: %m'
-      - '%f:%l:%c: %tarning: %m'
-      - '%f:%l:%c: %tote: %m'
-
-  python-black: &python-black
-    format-command: 'black --quiet -'
-    format-stdin: true
-
-  python-autopep8: &python-autopep8
-    format-command: 'autopep8 -'
-    format-stdin: true
-
-  python-yapf: &python-yapf
-    format-command: 'yapf --quiet'
-    format-stdin: true
-
-  python-isort: &python-isort
-    format-command: 'isort --quiet -'
-    format-stdin: true
-
-  snakemake-lint: &snakemake-lint
-    lint-command: 'snakemake --lint text --snakefile ${INPUT}'
-    lint-formats:
-      - '%ILints for rule %.%# (line %l, %f):'
-      - '%C    *%m:'
-      - '%C%.%#'
-      - '%Z'
-
-  dockerfile-hadolint: &dockerfile-hadolint
-    lint-command: 'hadolint'
-    lint-formats:
-      - '%f:%l %m'
-
-  sh-shellcheck: &sh-shellcheck
-    lint-command: 'shellcheck -f gcc -x'
-    lint-source: 'shellcheck'
-    lint-formats:
-      - '%f:%l:%c: %trror: %m'
-      - '%f:%l:%c: %tarning: %m'
-      - '%f:%l:%c: %tote: %m'
-
-  sh-shfmt: &sh-shfmt
-    format-command: 'shfmt -ci -s -bn'
-    format-stdin: true
-
-  javascript-eslint: &javascript-eslint
-    lint-command: 'eslint -f unix --stdin'
-    lint-ignore-exit-code: true
-    lint-stdin: true
-
-  php-phpstan: &php-phpstan
-    lint-command: './vendor/bin/phpstan analyze --error-format raw --no-progress'
-
-  php-psalm: &php-psalm
-    lint-command: './vendor/bin/psalm --output-format=emacs --no-progress'
-    lint-formats:
-      - '%f:%l:%c:%trror - %m'
-      - '%f:%l:%c:%tarning - %m'
-
-  html-prettier: &html-prettier
-    format-command: './node_modules/.bin/prettier ${--tab-width:tabWidth} ${--single-quote:singleQuote} --parser html'
-
-  css-prettier: &css-prettier
-    format-command: './node_modules/.bin/prettier ${--tab-width:tabWidth} ${--single-quote:singleQuote} --parser css'
-
-  json-prettier: &json-prettier
-    format-command: './node_modules/.bin/prettier ${--tab-width:tabWidth} --parser json'
-
-  json-jq: &json-jq
-    lint-command: 'jq .'
-
-  json-fixjson: &json-fixjson
-    format-command: 'fixjson'
-
-  csv-csvlint: &csv-csvlint
-    lint-command: 'csvlint'
-
-  lua-lua-format: &lua-lua-format
-    format-command: 'lua-format -i'
-    format-stdin: true
-
-  blade-blade-formatter: &blade-blade-formatter
-    format-command: 'blade-formatter --stdin'
-    format-stdin: true
-
-  mix_credo: &mix_credo
-    lint-command: 'mix credo suggest --format=flycheck --read-from-stdin ${INPUT}'
-    lint-stdin: true
+  vale-lint: &vale-lint
+    lint-command: "vale --relative --output line ${INPUT}"
+    lint-stdin: false
     lint-ignore-exit-code: true
     lint-formats:
-      - '%f:%l:%c: %m'
+      - "%f:%l:%c:%*[^:]:%m"
+
+  redpen-lint-core: &redpen-lint-core
+    lint-command: "redpen -l 9999 -r plain ${INPUT}"
+    lint-stdin: false
+    lint-ignore-exit-code: true
+    lint-formats:
+      - "%f:%l: Validation%t%*[a-z][%*[a-zA-Z]], %m at line:%r"
+    root-markers:
+      - redpen-conf.xml
+      - redpen-conf-??.xml
+
+  redpen-lint: &redpen-lint
+    <<: *redpen-lint-core
+
+  redpen-text-lint: &redpen-text-lint
+    <<: *redpen-lint-core
+    lint-command: "redpen -l 9999 -f plain -r plain ${INPUT}"
+
+  vint-lint: &vint-lint
+    lint-command: "vint --enable-neovim --style-problem --stdin-display-name ${INPUT} -"
+    lint-stdin: true
+
+  nvcheck-lint: &nvcheck-lint
+    lint-command: "nvcheck ${INPUT}"
+    lint-stdin: false
+    lint-formats:
+      - "%f:%l: %m"
+    root-markers:
+      - dict.yml
+    commands:
+      - command: "nvcheck -i ${INPUT}"
+        title: "nvcheck fix"
+
+  markdownlint-lint: &markdownlint-lint
+    lint-command: "markdownlint --stdin"
+    lint-stdin: true
+    lint-formats:
+      - "%f:%l:%c MD%n/%*[^ ] %m"
+      - "%f:%l MD%n/%*[^ ] %m"
+    commands:
+      - command: "markdownlint --fix ${INPUT}"
+        title: "markdownlint fix"
+
+  pandoc-markdown-format: &pandoc-markdown-format
+    format-command: "pandoc -f markdown -t gfm -sp --tab-stop=2"
+    format-stdin: true
+
+  pandoc-rst-format: &pandoc-rst-format
+    format-command: "pandoc -f rst -t rst -s --columns=79"
+    format-stdin: true
+
+  jsonlint-lint: &jsonlint-lint
+    lint-command: "jsonlint -c"
+    lint-stdin: true
+    lint-formats:
+      - "line %l, col %c, found: %m"
+
+  jq-format: &jq-format
+    format-command: "jq ."
+    format-stdin: true
+
+  fixjson-format: &fixjson-format
+    format-command: "fixjson"
+    format-stdin: true
+
+  shellcheck-lint: &shellcheck-lint
+    lint-command: "shellcheck -f gcc -x -"
+    lint-stdin: true
+    lint-formats:
+      - "%f:%l:%c: %t%*[^:]: %m [SC%n]"
+
+  shfmt-format: &shfmt-format
+    format-command: "shfmt -ln bash -i 2 -bn -ci -sr -kp"
+    format-stdin: true
+
+  flake8-lint: &flake8-lint
+    lint-command: "flake8 --stdin-display-name ${INPUT} -"
+    lint-stdin: true
+    lint-formats:
+      - "%f:%l:%c: %m"
+    root-markers:
+      - setup.cfg
+      - tox.ini
+      - .flake8
+
+  pylint-lint: &pylint-lint
+    lint-command: "pylint --output-format=text --reports=no --score=no ${INPUT}"
+    lint-stdin: false
+    lint-formats:
+      - "%f:%l:%c: C%n: %m"
+    root-markers:
+      - setup.cfg
+      - .pylintrc
+
+  mypy-lint: &mypy-lint
+    lint-command: "mypy --show-column-numbers --strict --strict-equality"
+    lint-formats:
+      - "%f:%l:%c: %t%*[^:]: %m"
+    root-markers:
+      - setup.cfg
+      - mypy.ini
+
+  black-action-format: &black-action-format
+    commands:
+      - command: "black --quiet --safe ${INPUT}"
+        title: "black format"
+
+  pydocstyle-lint: &pydocstyle-lint
+    lint-command: "pydocstyle ${INPUT}"
+    lint-stdin: false
+    lint-ignore-exit-code: true
+    lint-formats:
+      - "%I%f:%l %.%#:"
+      - '%Z%*\sD%n: %m'
+
+  rubocop-lint: &rubocop-lint
+    lint-command: "bundle exec rubocop --format emacs --force-exclusion --stdin ${INPUT}"
+    lint-ignore-exit-code: true
+    lint-stdin: true
+    lint-formats:
+      - "%f:%l:%c: %m"
+    root-markers:
+      - Gemfile
+      - Rakefile
+      - .rubocop.yml
+    commands:
+      - command: "bundle exec rubocop --auto-correct-all ${INPUT}"
+        title: "rubocop fix"
+
+  rufo-format: &rufo-format
+    format-command: "bundle exec rufo ${INPUT}"
+    format-stdin: false
+    root-markers:
+      - Gemfile
+      - Rakefile
+      - .rufo
+
+  rbprettier-action-format: &rbprettier-action-format
+    commands:
+      - command: "bundle exec rbprettier --write ${INPUT}"
+        title: "rbprettier format"
+
+  yamllint-lint: &yamllint-lint
+    lint-command: "yamllint --strict --format parsable ${INPUT}"
+    lint-stdin: false
+    lint-formats:
+      - "%f:%l:%c: [%t%*[a-z]] %m"
+    env:
+      - "PYTHONIOENCODING=UTF-8"
+
+  restructuredtext-lint-lint: &restructuredtext-lint-lint
+    lint-command: "rst-lint --encoding utf-8 --level warning --format text ${INPUT}"
+    lint-stdin: false
+    lint-ignore-exit-code: true
+    lint-formats:
+      - "%t%*[A-Z] %f:%l %m"
+
+  rstcheck-lint: &rstcheck-lint
+    lint-command: "rstcheck --report warning -"
+    lint-stdin: true
+    lint-formats:
+      - "%f:%l: (%t%*[^/]/%n) %m"
+
+  textlint-lint: &textlint-lint
+    lint-command: "npx --no-install textlint -f unix --stdin --stdin-filename ${INPUT}"
+    lint-ignore-exit-code: true
+    lint-stdin: true
+    lint-formats:
+      - "%f:%l:%c: %m [%trror/%r]"
+      - "%f:%l:%c: 【%r】 %m"
+      - "%E%f:%l:%c: %m"
+      - "%Z%m [%trror/%r]"
+      - "%C%m"
+    root-markers:
+      - .textlintrc
+    commands:
+      - command: "npx --no-install textlint --fix ${INPUT}"
+        title: "textlint fix"
+
+  eslint-lint: &eslint-lint
+    lint-command: "npx --no-install eslint -f unix --stdin --stdin-filename ${INPUT}"
+    lint-ignore-exit-code: true
+    lint-stdin: true
+    root-markers:
+      - package.json
+      - .eslintrc.js
+      - .eslintrc.yaml
+      - .eslintrc.yml
+      - .eslintrc.json
+    commands:
+      - command: "npx --no-install eslint --fix ${INPUT}"
+        title: "eslint fix"
+
+  stylelint-lint: &stylelint-lint
+    lint-command: "npx --no-install stylelint --formatter unix --stdin --stdin-filename ${INPUT}"
+    lint-ignore-exit-code: false
+    lint-stdin: true
+    lint-formats:
+      - "%f:%l:%c: %m [%t%*[a-z]]"
+    root-markers:
+      - .stylelintrc.json
+    commands:
+      - command: "npx --no-install stylelint --fix ${INPUT}"
+        title: "stylelint fix"
+
+  htmllint-lint: &htmllint-lint
+    lint-command: "npx --no-install htmllint ${INPUT}"
+    lint-stdin: false
+    lint-formats:
+      - "%f: line %l, col %c, %m"
+    root-markers:
+      - .htmllintrc
+
+  buf-lint: &buf-lint
+    lint-command: "buf lint --path"
+    root-markers:
+      - buf.yaml
+
+  prettier-action-fix: &prettier-action-fix
+    commands:
+      - command: "npx --no-install prettier --fix --write ${INPUT}"
+        title: "prettier fix"
+
+  credo-lint: &credo-lint
+    lint-command: "mix credo suggest --format=flycheck --read-from-stdin ${INPUT}"
+    lint-stdin: true
+    lint-formats:
+      - "%f:%l:%c: %t: %m"
+      - "%f:%l: %t: %m"
     root-markers:
       - mix.lock
       - mix.exs
 
+  excitetranslate-hover: &excitetranslate-hover
+    hover-command: "excitetranslate"
+    hover-stdin: true
+
+# languages setting
 languages:
-  eruby:
-    - <<: *eruby-erb
-
   vim:
-    - <<: *vim-vint
-
-  make:
-    - <<: *make-checkmake
+    - <<: *vint-lint
 
   markdown:
-    - <<: *markdown-markdownlint
-    - <<: *markdown-pandoc
-
-  rst:
-    - <<: *rst-lint
-    - <<: *rst-pandoc
-
-  yaml:
-    - <<: *yaml-yamllint
-
-  python:
-    - <<: *python-flake8
-    - <<: *python-mypy
-    # - <<: *python-autopep8
-    # - <<: *python-yapf
-    - <<: *python-black
-    - <<: *python-isort
-
-  dockerfile:
-    - <<: *dockerfile-hadolint
-
-  sh:
-    - <<: *sh-shellcheck
-    - <<: *sh-shfmt
-
-  javascript:
-    - <<: *javascript-eslint
-
-  php:
-    - <<: *php-phpstan
-    - <<: *php-psalm
-
-  html:
-    - <<: *html-prettier
-
-  css:
-    - <<: *css-prettier
+    - <<: *markdownlint-lint
+    - <<: *textlint-lint
+    - <<: *redpen-lint
+    - <<: *vale-lint
+    - <<: *nvcheck-lint
+    - <<: *stylelint-lint
+    - <<: *prettier-action-fix
+    - <<: *pandoc-markdown-format
 
   json:
-    - <<: *json-jq
-    - <<: *json-fixjson
-    # - <<: *json-prettier
+    - <<: *jsonlint-lint
+    - <<: *jq-format
+    - <<: *fixjson-format
+    - <<: *prettier-action-fix
 
-  csv:
-    - <<: *csv-csvlint
+  json5:
+    - <<: *fixjson-format
+    - <<: *prettier-action-fix
 
-  lua:
-    - <<: *lua-lua-format
+  text:
+    - <<: *textlint-lint
+    - <<: *redpen-text-lint
+    - <<: *vale-lint
+    - <<: *nvcheck-lint
 
-  blade:
-    - <<: *blade-blade-formatter
+  help:
+    - <<: *textlint-lint
+    - <<: *redpen-text-lint
+    - <<: *vale-lint
+    - <<: *nvcheck-lint
+
+  cpp:
+    - <<: *cppcheck-lint
+
+  c:
+    - <<: *cppcheck-lint
+
+  sh:
+    - <<: *shellcheck-lint
+    - <<: *shfmt-format
+
+  yaml:
+    - <<: *yamllint-lint
+    - <<: *prettier-action-fix
+
+  rst:
+    - <<: *restructuredtext-lint-lint
+    - <<: *rstcheck-lint
+    - <<: *textlint-lint
+    - <<: *redpen-lint
+    - <<: *vale-lint
+    - <<: *nvcheck-lint
+    - <<: *pandoc-rst-format
+
+  asciidoc:
+    - <<: *textlint-lint
+    - <<: *redpen-lint
+
+  review:
+    - <<: *textlint-lint
+    - <<: *redpen-lint
+
+  javascript:
+    - <<: *eslint-lint
+
+  typescript:
+    - <<: *eslint-lint
+    - <<: *prettier-action-fix
+
+  css:
+    - <<: *stylelint-lint
+    - <<: *prettier-action-fix
+
+  scss:
+    - <<: *stylelint-lint
+    - <<: *prettier-action-fix
+
+  sass:
+    - <<: *stylelint-lint
+
+  less:
+    - <<: *stylelint-lint
+
+  sugarss:
+    - <<: *stylelint-lint
+
+  proto:
+    - <<: *buf-lint
+
+  python:
+    - <<: *flake8-lint
+    - <<: *pylint-lint
+    - <<: *mypy-lint
+    - <<: *black-action-format
+    - <<: *pydocstyle-lint
+
+  ruby:
+    - <<: *rubocop-lint
+    - <<: *rufo-format
+    - <<: *rbprettier-action-format
+    - <<: *prettier-action-fix
+
+  graphql:
+    - <<: *prettier-action-fix
+
+  vue:
+    - <<: *prettier-action-fix
+
+  html:
+    - <<: *textlint-lint
+    - <<: *htmllint-lint
+    - <<: *stylelint-lint
+    - <<: *prettier-action-fix
 
   elixir:
-    - <<: *mix_credo
+    - <<: *credo-lint
 
-  snakemake:
-    - <<: *snakemake-lint
+  _:
+    - <<: *excitetranslate-hover
