--- a/requirements.txt
+++ b/requirements.txt
@@ -122,6 +122,7 @@ prompt-toolkit==3.0.7
 proto-plus==1.13.0
 protobuf==3.13.0
 psutil==5.7.2
+psycopg2-binary==2.9.1
 ptyprocess==0.6.0
 pulumi==3.4.0
 pulumi-gcp==5.8.0
