--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ chardet==3.0.4
 click==7.1.2
 click-completion==0.5.2
 click-help-colors==0.9
+cloudstorage==0.11.0
 colorama==0.4.3
 commonmark==0.9.1
 cookiecutter==1.7.2
@@ -74,6 +75,7 @@ grpcio==1.34.0
 httplib2==0.18.1
 humanize==3.1.0
 idna==2.10
+inflection==0.5.1
 iniconfig==1.1.1
 ipdb==0.13.3
 ipython==7.18.1
@@ -149,6 +151,7 @@ python-editor==1.0.4
 python-json-logger==2.0.1
 python-jsonrpc-server==0.3.4
 python-language-server==0.34.1
+python-magic==0.4.24
 python-slugify==4.0.1
 pytz==2020.1
 PyYAML==5.3.1
