--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ click-help-colors==0.9
 cloudstorage==0.11.0
 colorama==0.4.3
 commonmark==0.9.1
+ConfigUpdater==2.0
 cookiecutter==1.7.2
 cryptography==3.3.1
 debugpy==1.3.0
@@ -108,7 +109,7 @@ neovim-remote==2.4.0
 numpy==1.19.2
 oauth2client==4.1.3
 oauthlib==3.1.0
-packaging==20.4
+packaging==21.0
 pandas==1.1.2
 paramiko==2.7.2
 parso==0.7.1
@@ -147,6 +148,7 @@ pyls-mypy==0.1.8
 PyNaCl==1.4.0
 pynvim==0.4.3
 pyparsing==2.4.7
+PyScaffold==4.0.2
 pytest==6.1.2
 python-dateutil==2.8.1
 python-editor==1.0.4
@@ -165,6 +167,7 @@ rope==0.17.0
 rsa==4.5
 s3transfer==0.4.2
 semver==2.13.0
+setuptools-scm==6.0.1
 shellingham==1.4.0
 six==1.15.0
 smmap==3.0.4
@@ -177,6 +180,7 @@ termcolor==1.1.0
 text-unidecode==1.3
 texttable==1.6.2
 toml==0.10.1
+tomlkit==0.7.2
 traitlets==5.0.4
 tree-sitter==0.2.2
 typed-ast==1.4.1
