--- a/tmux.conf
+++ b/tmux.conf
@@ -1,17 +1,44 @@
-# force a reload of the config file
-bind r source-file ~/.tmux.conf
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @themepack 'basic'
 
-# quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
+set -g base-index 1
+set -g pane-base-index 1
+set -g renumber-windows on
 
+set-option -sa terminal-overrides ',xterm-256color:RGB'
+
+set-option -g default-shell /bin/zsh
+run-shell '~/.tmux/plugins/tmux-sensible/sensible.tmux'
+run '~/.tmux/plugins/tpm/tpm'
+
+set-window-option -g mode-keys vi
+
+# rebinding
+unbind-key C-b
+set-option -g prefix M-s
+bind-key M-s last-window
+
+# moving between panes by vim bindings
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 bind e setw synchronize-panes on
 bind E setw synchronize-panes off
 
-set -g mouse on
-
-set-window-option -g mode-keys vi
+# moving tabs to +1/-1 spaces
+bind-key S-Left swap-window -t -1
+bind-key S-Right swap-window -t +1
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"# Fig Tmux Integration: Enabled
-source-file ~/.fig/tmux
-# End of Fig Tmux Integration
+
+## pane sync
+#bind -n C-x setw synchronize-panes
+
+
+# reload config
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+
