--- a/requirements.txt
+++ b/requirements.txt
@@ -201,6 +201,7 @@ virtualenvwrapper==4.8.4
 waze-spinnaker==0.0.4
 wcwidth==0.2.5
 websocket-client==0.58.0
+websockets==9.1
 Werkzeug==1.0.1
 wrapt==1.12.1
 xmltodict==0.12.0
