nvim: changes to lsp
also include small change to kitty

--- a/.config/kitty/themes/onedark.conf
+++ b/.config/kitty/themes/onedark.conf
@@ -1,3 +1,5 @@
+tab_bar_style slant
+
 # onedark colors for Kitty
 
 background #282c34
@@ -8,11 +10,19 @@ url_color #98c379
 cursor #abb2bf
 
 # Tabs
-active_tab_background #282c34
-active_tab_foreground #abb2bf
-inactive_tab_background #242b38
-inactive_tab_foreground #5c6370
-#tab_bar_background #20232A
+# active_tab_background #282c34
+# active_tab_foreground #abb2bf
+# inactive_tab_background #242b38
+# inactive_tab_foreground #5c6370
+# tab_bar_background #20232A
+#
+
+active_tab_foreground   #000
+active_tab_background   #eee
+active_tab_font_style   bold-italic
+inactive_tab_foreground #444
+inactive_tab_background #999
+inactive_tab_font_style normal
 
 # normal
 color0 #20232A
