kitty: change nvim scrollback_pager
also add nvim bufdelete(!)

--- a/.config/kitty/mapping.conf
+++ b/.config/kitty/mapping.conf
@@ -30,7 +30,7 @@ map kitty_mod+end       scroll_end
 map kitty_mod+enter new_window_with_cwd
 map kitty_mod+equal     change_font_size all +2.0
 map kitty_mod+escape kitty_shell window
-map kitty_mod+f launch --stdin-source=@screen_scrollback --stdin-add-formatting less +G -Ri
+map kitty_mod+f show_scrollback
 map kitty_mod+f11    toggle_fullscreen
 map kitty_mod+home      scroll_home
 map kitty_mod+j         scroll_line_down
