--- a/.config/kitty/layout.conf
+++ b/.config/kitty/layout.conf
@@ -43,7 +43,7 @@ rectangle_select_modifiers ctrl+alt
 remember_window_size  yes
 repaint_delay 8
 scrollback_lines 10000
-scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
+scrollback_pager nvim -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
 scrollback_pager_history_size 0
 select_by_word_characters :@-./_~?&=%+#
 shell .
