--- a/.config/kitty/themes/onedark.conf
+++ b/.config/kitty/themes/onedark.conf
@@ -1,45 +1,31 @@
 tab_bar_style slant
 
-# onedark colors for Kitty
+# onedarkpro.nvim - onedark
 
-background #282c34
+background #1e1e1e
 foreground #abb2bf
-selection_background #393f4a
-selection_foreground #abb2bf
-url_color #98c379
-cursor #abb2bf
 
-# Tabs
-# active_tab_background #282c34
-# active_tab_foreground #abb2bf
-# inactive_tab_background #242b38
-# inactive_tab_foreground #5c6370
-# tab_bar_background #20232A
-#
+color0 #1e1e1e
+color1 #e06c75
+color2 #98c379
+color3 #e5c07b
+color4 #61afef
+color5 #c678dd
+color6 #56b6c2
+color7 #abb2bf
+color8 #5c6370
+color9 #d19a66
+color10 #56b6c2
+color11 #e5c07b
+color12 #61afef
+color13 #c678dd
+color14 #56b6c2
+color15 #abb2bf
 
+# Tab Bar
 active_tab_foreground   #000
 active_tab_background   #eee
 active_tab_font_style   bold-italic
 inactive_tab_foreground #444
 inactive_tab_background #999
 inactive_tab_font_style normal
-
-# normal
-color0 #20232A
-color1 #e86671
-color2 #98c379
-color3 #e0af68
-color4 #61afef
-color5 #c678dd
-color6 #56b6c2
-color7 #798294
-
-# bright
-color8 #5c6370
-color9 #e86671
-color10 #98c379
-color11 #e0af68
-color12 #61afef
-color13 #c678dd
-color14 #56b6c2
-color15 #abb2bf
