nvim: minor fixes

--- a/.config/kitty/font.conf
+++ b/.config/kitty/font.conf
@@ -4,19 +4,10 @@ font_size 13.0
 font_size_delta 12.0
 
 ### Font Family
-font_family      Iosevka Fixed
-bold_font        Iosevka Fixed Bold
-bold_italic_font Iosevka Fixed Bold Italic
-# font_family      Ubuntu Mono
-# font_family      Rec Mono Semicasual
-
-### Font Styles
-bold_font          auto
-italic_font        auto
-bold_italic_font   auto
+font_family      MesloLGS NF Regular
+italic_font      MesloLGS NF Italic
+bold_font        MesloLGS NF Bold Italic
+bold_italic_font MesloLGS NF Bold Italic
 
 ### Font literatures
 force_ltr no
-
-### Nerd Font supports
-symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
