nvim: add focus and neogen

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,3 +2,7 @@ include themes/init.conf
 include font.conf
 include layout.conf
 include mapping.conf
+
+# Fig Kitty Integration: Enabled
+watcher ${HOME}/.fig/tools/kitty-integration.py
+# End of Fig Kitty Integration
