--- a/.config/kitty/mapping.conf
+++ b/.config/kitty/mapping.conf
@@ -51,7 +51,7 @@ map kitty_mod+q     close_tab
 map kitty_mod+r start_resizing_window
 map kitty_mod+right next_tab
 map kitty_mod+s  paste_from_selection
-map kitty_mod+t     new_tab
+map kitty_mod+t     no_op
 map kitty_mod+u      kitten unicode_input
 map kitty_mod+up        scroll_line_up
 map kitty_mod+v  paste_from_clipboard
