--- a/tmux.conf
+++ b/tmux.conf
@@ -1,44 +1,28 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'jimeh/tmux-themepack'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @themepack 'basic'
 
+set-option -g history-limit 50000
+set -g mouse on
 set -g base-index 1
-set -g pane-base-index 1
+setw -g pane-base-index 1
 set -g renumber-windows on
 
-set-option -sa terminal-overrides ',xterm-256color:RGB'
-
-set-option -g default-shell /bin/zsh
-run-shell '~/.tmux/plugins/tmux-sensible/sensible.tmux'
-run '~/.tmux/plugins/tpm/tpm'
-
-set-window-option -g mode-keys vi
-
-# rebinding
-unbind-key C-b
-set-option -g prefix M-s
-bind-key M-s last-window
-
-# moving between panes by vim bindings
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind e setw synchronize-panes on
-bind E setw synchronize-panes off
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+bind-key -n M-6 select-window -t 6
+bind-key -n M-7 select-window -t 7
+bind-key -n M-8 select-window -t 8
+bind-key -n M-9 select-window -t 9
+bind | split-window -hc "#{pane_current_path}"
+bind - split-window -vc "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# moving tabs to +1/-1 spaces
-bind-key S-Left swap-window -t -1
-bind-key S-Right swap-window -t +1
-bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"# Fig Tmux Integration: Enabled
-
-## pane sync
-#bind -n C-x setw synchronize-panes
-
-
-# reload config
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
-
+run '~/.tmux/plugins/tpm/tpm'
