tmux: move out of tmux, it's nice but I don't find this neccessary with kitty
also created a kitty tab script

--- a/.config/kitty/layout.conf
+++ b/.config/kitty/layout.conf
@@ -52,7 +52,6 @@ startup_session none
 sync_to_monitor yes
 tab_bar_edge top
 tab_bar_margin_width 1.0
-tab_bar_min_tabs 2
 tab_bar_style powerline
 term xterm-kitty
 touch_scroll_multiplier 2.0
@@ -65,3 +64,15 @@ window_margin_width 0.0
 window_padding_width 0.0
 window_resize_step_cells 2
 window_resize_step_lines 2
+
+tab_bar_edge bottom
+tab_bar_margin_width 0.0
+tab_bar_margin_height 0.0 0.0
+tab_bar_style custom
+tab_powerline_style round
+tab_bar_background #1e1e1e
+tab_title_template "{fmt.fg.default}{index}"
+tab_title_template "{index}: {title[title.rfind('/')+1:]}"
+tab_bar_min_tabs 1
+tab_activity_symbol none
+active_tab_font_style   bold
