--- a/.config/kitty/themes/onedark.conf
+++ b/.config/kitty/themes/onedark.conf
@@ -1,3 +1,5 @@
+# vim:ft=kitty
+
 tab_bar_style slant
 
 # onedarkpro.nvim - onedark
@@ -23,9 +25,9 @@ color14 #56b6c2
 color15 #abb2bf
 
 # Tab Bar
-active_tab_foreground   #000
-active_tab_background   #eee
+tab_bar_background      #1e1e1e
+active_tab_background   #61afef
+inactive_tab_foreground #1e1e1e
+inactive_tab_background #abb2bf
 active_tab_font_style   bold-italic
-inactive_tab_foreground #444
-inactive_tab_background #999
 inactive_tab_font_style normal
