tmux: remove tmux, I don't find it necessary.
- adjust kitty tab bar.
- better p10k config
- prepare for nvim mason

--- a/.config/kitty/themes/onedark.conf
+++ b/.config/kitty/themes/onedark.conf
@@ -26,7 +26,7 @@ color15 #abb2bf
 
 # Tab Bar
 tab_bar_background      #1e1e1e
-active_tab_background   #61afef
+active_tab_background   #3aa1f7
 inactive_tab_foreground #1e1e1e
 inactive_tab_background #abb2bf
 active_tab_font_style   bold-italic
