--- a/.config/kitty/font.conf
+++ b/.config/kitty/font.conf
@@ -4,10 +4,10 @@ font_size 13.0
 font_size_delta 12.0
 
 ### Font Family
-font_family      MesloLGS NF Regular
-italic_font      MesloLGS NF Italic
-bold_font        MesloLGS NF Bold Italic
-bold_italic_font MesloLGS NF Bold Italic
+font_family      FiraCode Nerd Font
+italic_font      FiraCode Nerd Font
+bold_font        FiraCode Nerd Font
+bold_italic_font FiraCode Nerd Font
 
 ### Font literatures
 force_ltr no
