fonts: start using FiraCoda Nerd
also small fixes to nvim and zshrc

--- a/.config/kitty/font.conf
+++ b/.config/kitty/font.conf
@@ -4,6 +4,8 @@ font_size 13.0
 font_size_delta 12.0
 
 ### Font Family
+# brew tap homebrew/cask-fonts
+# brew cask install font-fira-code
 font_family      FiraCode Nerd Font
 italic_font      FiraCode Nerd Font
 bold_font        FiraCode Nerd Font
